# marginfi-v2

./: .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  README.md  package.json
idls/: kamino_lending.json
p0-cli/: AGENTS.md  Cargo.toml  README.md
p0-cli/assets/: assetGroups.json  mainnet_metadata_dump.json
p0-cli/configs/: README.md
p0-cli/configs/drift/harvest-reward/: config.json.example
p0-cli/configs/drift/init-user/: config.json.example
p0-cli/configs/drift/withdraw/: config.json.example
p0-cli/configs/kamino/deposit/: config.json.example
p0-cli/configs/kamino/harvest-reward/: config.json.example
p0-cli/configs/kamino/init-obligation/: config.json.example
p0-cli/configs/kamino/withdraw/: config.json.example
p0-cli/src/: config.rs  configs.rs  entrypoint.rs  lib.rs  output.rs  profile.rs  utils.rs
p0-cli/src/commands/: account.rs  bank.rs  drift.rs  group.rs  juplend.rs  kamino.rs  mod.rs  profile.rs  util.rs
p0-cli/src/processor/: account.rs  admin.rs  bank_ops.rs  fee.rs  group_ops.rs  integrations.rs  mod.rs  oracle.rs  profile_ops.rs
scripts/: README.MD  distill_kamino_idls.sh  distill_kamino_macro_idl.py
tests/: 03_addBank.spec.ts  04_configureBank.spec.ts  07_deposit.spec.ts  08_borrow.spec.ts  09_withdraw_repay.spec.ts  10_liquidate.spec.ts  12_transfer_account.spec.ts  13_closebank.spec.ts  16_orders.spec.ts  18_emissionsDeposit.spec.ts  19_closeAccount.spec.ts  d06_driftBankInit.spec.ts  d07_driftDeposit.spec.ts  d08_driftWithdraw.spec.ts  d10_driftInterestSimulation.spec.ts  d15_fixedPrice.spec.ts  e05_panicMode.spec.ts  genericSetups.ts  jlr01_init_bank.spec.ts  jlr02_deposit.spec.ts  jlr04_withdraw.spec.ts  jlr06_rewards.spec.ts  jlr07_fixedPrice.spec.ts  jlr08_withSwitchboard.spec.ts  jlr09_withT22.spec.ts  jlr10_deleverage.spec.ts  rootHooks.ts  (+15 more)
(+153 files in other folders)
