[package]
name = "p0-cli"
version = "0.1.8"
edition = "2021"

[[bin]]
name = "p0"
path = "src/bin/main.rs"

[features]
mainnet-beta = ["marginfi/mainnet-beta"]
default = ["mainnet-beta"]
staging = ["marginfi/staging"]

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }

anchor-client = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }

# pythnet-sdk = { workspace = true }
switchboard-on-demand = { workspace = true }
borsh = { workspace = true }

marginfi-type-crate = { workspace = true, features = ["anchor"] }
marginfi = { path = "../programs/marginfi", version = "0.1.0", features = [
    "client",
    "no-entrypoint",
] }
kamino-mocks = { path = "../programs/kamino-mocks", features = ["no-entrypoint"] }
drift-mocks = { path = "../programs/drift-mocks", features = ["no-entrypoint"] }
juplend-mocks = { path = "../programs/juplend-mocks", features = ["no-entrypoint"] }

clap = { version = "4", features = ["derive"] }
anyhow = "1.0.58"
log = "0.4.17"
env_logger = "0.9.0"
dirs = "4.0.0"
shellexpand = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
fixed = { workspace = true }
fixed-macro = { workspace = true }
bytemuck = "1.12.3"
chrono = "0.4.23"
bincode = "1.3.1"
bs58 = { workspace = true }
rand = "0.8.4"
pyth-solana-receiver-sdk = { workspace = true }
hex = "0.4.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
comfy-table = "6"
base64 = "0.22"
